Make price inputs wider to prevent overflow

--- a/src/templates/offers-display.css
+++ b/src/templates/offers-display.css
@@ -20,7 +20,7 @@
 }
 
 .price-container input {
-  max-width: 4em;
+  max-width: 5.5em;
 }
 
 .room-container {
